jellyfin/webdav-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-webdav
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: jellyfin-webdav
