jellyfin/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:10.11.11
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /media
            name: jellyfin-data
          - mountPath: /config
            name: jellyfin-config
          - mountPath: /cache
            name: jellyfin-cache
      volumes:
      - name: jellyfin-data
        persistentVolumeClaim:
          claimName: jellyfin-data
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config
      - name: jellyfin-cache
        persistentVolumeClaim:
          claimName: jellyfin-cache
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - port: 80
    targetPort: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "jellyfin.aidengrossman.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
